src/test/ui/closures/closure-expected-type/expect-region-supply-region.nll.stderr
error[E0521]: borrowed data escapes outside of closure
  --> $DIR/expect-region-supply-region.rs:18:9
   |
LL |     let mut f: Option<&u32> = None;
   |         ----- `f` is declared here, outside of the closure body
LL |     closure_expecting_bound(|x| {
   |                              - `x` is a reference that is only valid in the closure body
LL |         f = Some(x);
   |         ^^^^^^^^^^^ `x` escapes the closure body here

error[E0521]: borrowed data escapes outside of closure
  --> $DIR/expect-region-supply-region.rs:28:9
   |
LL |     let mut f: Option<&u32> = None;
   |         ----- `f` is declared here, outside of the closure body
LL |     closure_expecting_bound(|x: &u32| {
   |                              - `x` is a reference that is only valid in the closure body
LL |         f = Some(x);
   |         ^^^^^^^^^^^ `x` escapes the closure body here

error: lifetime may not live long enough
  --> $DIR/expect-region-supply-region.rs:37:30
   |
LL | fn expect_bound_supply_named<'x>() {
   |                              -- lifetime `'x` defined here
...
LL |     closure_expecting_bound(|x: &'x u32| {
   |                              ^  - let's call the lifetime of this reference `'1`
   |                              |
   |                              requires that `'1` must outlive `'x`

error: lifetime may not live long enough
  --> $DIR/expect-region-supply-region.rs:37:30
   |
LL | fn expect_bound_supply_named<'x>() {
   |                              -- lifetime `'x` defined here
...
LL |     closure_expecting_bound(|x: &'x u32| {
   |                              ^ requires that `'x` must outlive `'static`

error: aborting due to 4 previous errors

